# agentos

./: .gitignore  .npmignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  example.package.json  next.config.ts  package-lock.json  package.json  seed-commits.sh  tinfoil-config.yml  tsconfig.json
.github/workflows/: arm64.yaml  docker-publish.yml  holoiroh-ci.yml  tinfoil-build.yml
.gm/memories/: .flat-export-done  mem-0ba96f0d7e5f4ec8-430.md  mem-1124e46355179182-2421.md  mem-131862ae3de46fdf-536.md  mem-1930451e2fc473c1-1017.md  mem-1a423b920920b973-2416.md  mem-1e8601133c9dcbb6-768.md  mem-2c29c90b2548ea18-675.md  (+35 more)
.wfgy/: lessons.md
app/: bootstrap.ts  layout.tsx
holoiroh/: .gitignore  BENCHMARKS.md  Cargo.toml  PROTOCOL.md  README.md
holoiroh-vendor/iroh-live-patched/: Cargo.toml
holoiroh-vendor/iroh-live-patched/demos/headless/: Cargo.toml
holoiroh-vendor/iroh-live-patched/demos/pi-zero/: Cargo.toml
holoiroh-vendor/iroh-live-patched/demos/pi-zero/src/: watch.rs
holoiroh-vendor/iroh-live-patched/iroh-live/: Cargo.toml
holoiroh-vendor/iroh-live-patched/iroh-live-cli/: Cargo.toml
holoiroh-vendor/iroh-live-patched/iroh-live-cli/src/: import.rs  publish.rs
holoiroh-vendor/iroh-live-patched/iroh-live-relay/src/: lib.rs  pull.rs
holoiroh-vendor/iroh-live-patched/iroh-live-relay/tests/: relay_bridge.rs
holoiroh-vendor/iroh-live-patched/iroh-live/examples/: watch-wgpu.rs
holoiroh-vendor/iroh-live-patched/iroh-live/src/: rooms.rs  util.rs
holoiroh-vendor/iroh-live-patched/iroh-moq/: Cargo.toml
holoiroh-vendor/iroh-live-patched/iroh-moq/src/: lib.rs
holoiroh-vendor/iroh-live-patched/moq-media/: Cargo.toml
holoiroh-vendor/iroh-live-patched/moq-media/src/: adaptive.rs  catalog.rs  lib.rs  publish.rs  subscribe.rs  transport.rs
holoiroh-vendor/iroh-live-patched/moq-media/src/publish/: controller.rs
holoiroh-vendor/iroh-live-patched/rusty-capture/src/platform/apple/: screen.rs
holoiroh-vendor/iroh-live-patched/rusty-codecs/: Cargo.toml
holoiroh-vendor/iroh-live-patched/rusty-codecs/src/: codec.rs  config.rs  format.rs
holoiroh-vendor/iroh-live-patched/rusty-codecs/src/codec/: dynamic.rs
holoiroh-vendor/iroh-live-patched/rusty-codecs/src/codec/tests/: harness.rs
holoiroh-vendor/iroh-live-patched/rusty-codecs/src/processing/: convert.rs
holoiroh/.cargo/: config.toml
holoiroh/.fake-holo-bin/: fake_holo_serve.py  holo
holoiroh/holoiroh-wire/: Cargo.toml
holoiroh/holoiroh-wire/src/: lib.rs
holoiroh/ios/: IROH_FFI.md  PAIRING_PHRASE.md  Package.resolved  Package.swift
holoiroh/ios-app/: Info.plist  README.md  project.yml
holoiroh/ios-app/Assets.xcassets/LaunchBackground.colorset/: Contents.json
holoiroh/ios-app/Shim/: AppShim.swift
holoiroh/ios-bridge/: Cargo.toml  cbindgen.toml
holoiroh/ios-bridge/examples/: control_ffi_probe.rs  ffi_probe.rs  frame_pull_probe.rs  probe_reachable_live.rs
holoiroh/ios-bridge/include/: HoloirohIosBridge.h  module.modulemap
holoiroh/ios-bridge/src/: lib.rs
holoiroh/ios/Sources/HoloIrohApp/: AroTheme.swift  ClarifyComposer.swift  ClarifyPanel.swift  ConnectionDiagnostics.swift  ConnectionProfileRepository.swift  ConnectionProfileStore.swift  ContentView.swift  ControlChannelSender.swift  DiagnosticsView.swift  Haptics.swift  HoloConnection.swift  HoloIrohApp.swift  IntroView.swift  KeyboardDoneToolbar.swift  MainView.swift  OrbEffects.swift  OrbSound.swift  OrbitLayout.swift  PairingPhrase.swift  PairingTicket.swift  PairingVerificationView.swift  PairingView.swift  PairingWordlist.swift  QRScannerSheet.swift  QRScannerView.swift  REQUIRED_INFO_PLIST_KEYS.md  ReachabilityMonitor.swift  ReachabilityPill.swift  RecentPrompt.swift  RecentPromptsRepository.swift  RecentPromptsStrip.swift  RemoteControl.swift  SessionState.swift  SessionView.swift  ShakeGesture.swift  SplineOrbBackground.swift  ViewHeightKey.swift  VoiceTranscriber.swift
holoiroh/ios/Sources/HoloIrohApp/Models/: ServerMessage.swift
holoiroh/ios/Sources/HoloIrohApp/Resources/: orb.splinecode  orb.splineswift
holoiroh/ios/Sources/HoloIrohApp/Video/: IrohLiveFrameSource.swift  SyntheticVideoFrameSource.swift  VideoFrameSource.swift  VideoRenderView.swift
holoiroh/ios/Tools/RepositoryConformanceCheck/: main.swift  run.sh
holoiroh/mac-daemon/: Cargo.toml  PAIRING.md  TRANSPORT_ADR.md
holoiroh/mac-daemon/LaunchAgent/: com.holoiroh.daemon.plist
holoiroh/mac-daemon/examples/: allowlist_probe.rs  audit_log_probe.rs  auth_gate_probe.rs  auth_probe.rs  auto_yield_live_probe.rs  auto_yield_probe.rs  clarify_degenerate_probe.rs  clarify_inference_probe.rs  clarify_live_probe.rs  clarify_wire_probe.rs  consent_probe.rs  control_channel_probe.rs  control_probe.rs  current_ticket_live_probe.rs  current_ticket_wire_probe.rs  env_context_injection_probe.rs  env_context_probe.rs  env_context_seed.rs  envelope_probe.rs  epoch_mismatch_probe.rs  executor_probe.rs  fallback_switch_probe.rs  frontmost_app_probe.rs  holo_bridge_queue_probe.rs  holo_crash_epoch_probe.rs  holo_crash_redirect_probe.rs  holo_stop_probe.rs  input_request_probe.rs  limits_probe.rs  live_task_control_probe.rs  local_model_edge_probe.rs  local_model_probe.rs  pairing_phrase_probe.rs  pause_redirect_probe.rs  permissions_probe.rs  policy_probe.rs  print_current_ticket.rs  print_qr.rs  process_awareness_probe.rs  qr_probe.rs  (+17 more)
holoiroh/mac-daemon/src/: agent_guidance.rs  allowlist.rs  audit_log.rs  auth.rs  auto_yield.rs  capture.rs  clarify.rs  control_channel.rs  duration.rs  env_context.rs  executor.rs  frontmost_app.rs  instance_guard.rs  lib.rs  limits.rs  local_model.rs  main.rs  pairing_phrase.rs  permissions.rs  policy.rs  process_awareness.rs  registry.rs  remote_input.rs  router.rs  sensitive_categories.rs  task_fsm.rs  task_state.rs  tinfoil_proxy.rs  user_activity.rs
holoiroh/mac-daemon/src/holo_bridge/: a2a_client.rs  control.rs  health.rs  mod.rs  process.rs  stall_watchdog.rs  stop.rs
holoiroh/scripts/: deploy-iphone.sh
scripts/: deploy-prod.sh  enrich-workflow-manifest.mjs  genNbriManifest.mjs  nbriWorkflows.mjs  patch-workflow-web.mjs
(+3839 files in other folders)
