[package]
name = "holoiroh-ios-bridge"
version = "0.1.0"
edition = "2024"
description = "extern \"C\" FFI bridge exposing iroh-live ticket-connect/subscribe/frame-pull to the iOS Swift client, since neither iroh nor iroh-live ships official Swift/UniFFI bindings for iroh-live's media API -- see ../ios/IROH_FFI.md for the research behind this crate's existence."

[lib]
name = "holoiroh_ios_bridge"
# staticlib: what actually gets linked into the iOS xcframework (a `.a` per
# target triple, combined via `xcodebuild -create-xcframework`).
# lib (rlib): kept so this crate remains usable as an ordinary Rust dependency
# too -- specifically so `examples/ffi_probe.rs` (this repo's NO-UNIT-TESTS
# rule means validation is a `cargo run --example` binary, not a test file)
# can link the crate and exercise the real `extern "C"` surface's
# construction/teardown + error paths on the host triple. The staticlib slice
# is the one that cross-compiles to `aarch64-apple-ios` for the xcframework;
# see ../ios/IROH_FFI.md's "As-built: xcframework packaging" section.
crate-type = ["staticlib", "lib"]

[dependencies]
# Pure-serde wire-protocol types shared with holoiroh-daemon (mac-daemon) -- this crate used
# to hand-duplicate just the CONTROL_ALPN byte string (the one piece of the wire schema it
# touched in actual Rust code; ClientMessage/ServerMessage/TaskEnvelope<T> are only ever seen
# here as opaque JSON strings crossing the FFI boundary, decoded on the Swift side) since it
# could not depend on holoiroh-daemon directly (control_channel.rs pulled in macOS-only
# ScreenCaptureKit/etc via holo_bridge/audit_log, which do not cross-compile to
# aarch64-apple-ios). holoiroh-wire has NONE of that -- pure serde/uuid plus generic
# tokio::io framing helpers -- so this crate now depends on it directly instead of
# duplicating CONTROL_ALPN, and can adopt the typed ClientMessage/ServerMessage/TaskEnvelope<T>
# structs directly in Rust in the future instead of only ever seeing them as opaque JSON. See
# ../holoiroh-wire/src/lib.rs's module doc for the full rationale.
holoiroh-wire = { path = "../holoiroh-wire" }
# Same git-pinned dependency mac-daemon/Cargo.toml uses, kept in lockstep
# deliberately (both crates must agree on iroh-live's wire-compatible
# version). See mac-daemon/Cargo.toml's comment for why this is a git dep
# (iroh-live is not published on crates.io as of this writing) and why
# `package = "iroh-live"` is required (the git URL points at iroh-live's
# own multi-crate workspace root).
iroh-live = { git = "https://github.com/n0-computer/iroh-live", rev = "5f95758fcd1450e443a9134c9d9342bcc3957b85", package = "iroh-live" }
# Pinned to the same iroh version iroh-live's own dependency graph resolves
# to, same rationale as mac-daemon/Cargo.toml.
iroh = "=1.0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
# NDJSON control-channel framing: builds the bare `{"type":"pin","pin":...}`
# handshake line (with correct JSON string escaping for arbitrary PIN input)
# and classifies the daemon's first reply line (bare `auth_rejected` vs the
# envelope-wrapped greeting). Same crate/major the mac-daemon uses for the
# other side of this wire.
serde_json = "1"
anyhow = "1"
# On-device visibility into the media pipeline: `holoiroh_ios_bridge_new`
# installs a process-global stderr tracing subscriber (Once-guarded), so
# every decoder-selection line, per-packet decode error, and pipeline
# start/stop from moq-media/rusty-codecs shows up in the device console
# (`devicectl ... launch --console`). Added while root-causing the
# permanent-black-screen bug: the decode path fails SILENTLY on iOS
# without this -- every error the Mac-side probe could see was invisible
# on the phone.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# examples/frame_pull_probe.rs only: surfaces moq-media's internal decode-
# pipeline tracing (decoder selection, per-frame decode errors) which is
# otherwise invisible -- the probe exists precisely because that pipeline
# failed silently (zero frames, no error) on every platform. Not a
# dependency of the shipped staticlib.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# Generates ios-bridge.h from this crate's `extern "C"` signatures at build
# time. Not yet wired into build.rs (no build.rs exists yet) -- see this
# crate's src/lib.rs module doc for the exact command; left as a documented
# manual step for now rather than a build.rs that would silently do nothing
# useful in this environment (no iOS SDK to actually validate the header
# against).
cbindgen = "0.27"
