[package]
name = "holoiroh-daemon"
version = "0.1.0"
edition = "2024"
description = "Mac-side daemon that publishes screen+audio over iroh-live P2P and bridges prompts to holo-desktop-cli"

[dependencies]
# iroh-live is not published on crates.io as of this writing (verified via
# https://crates.io/api/v1/crates/iroh-live -> {"errors":[{"detail":"crate
# `iroh-live` does not exist"}]}, checked 2026-07-17). Using a git dependency
# against the upstream repo instead, pinned to a specific commit on `main`
# for reproducible builds (n0-computer/iroh-live has no version tags yet).
# The crate lives at the `iroh-live` subpath of that repo's own Cargo
# workspace (root Cargo.toml `members = ["iroh-live", ...]`), so `package`
# must be specified explicitly since the git URL itself points at the
# workspace root, not the crate directory.
#
# Pinned commit: 5f95758fcd1450e443a9134c9d9342bcc3957b85
# ("deps: update iroh and moq (#41)", 2026-07-15) — latest commit on `main`
# at the time this dependency was added. Bump deliberately; re-verify the
# crate's public API hasn't shifted before moving the pin.
iroh-live = { git = "https://github.com/n0-computer/iroh-live", rev = "5f95758fcd1450e443a9134c9d9342bcc3957b85", package = "iroh-live" }
# Direct dependency so control_channel.rs can reach `iroh::protocol::{Router, ProtocolHandler,
# AcceptError}` / `iroh::endpoint::Connection` for the control-channel ALPN, on top of the same
# `iroh::Endpoint` iroh-live's `Live` type owns. Pinned to the exact version iroh-live's own
# dependency graph resolves to (`cargo tree -p iroh` -> 1.0.2 as of this writing) via `=`, so
# Cargo can never resolve two different `iroh` versions into the build.
iroh = "=1.0.2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# holo_bridge: talks to `holo serve`'s local A2A (JSON-RPC over HTTP + SSE) endpoint and manages
# the `holo serve` subprocess. See holo_bridge/mod.rs doc comment for the source-grounded protocol
# details (verified against hcompai/holo-desktop-cli source, not invented).
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parses the `text/event-stream` body of the A2A `message/stream` JSON-RPC response frame-by-frame.
eventsource-stream = "0.2"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"

[target.'cfg(unix)'.dependencies]
# Used only to send SIGTERM (graceful shutdown) to the `holo serve` child before falling back
# to SIGKILL; this daemon is macOS-only per holoiroh/README.md so `cfg(unix)` always applies.
libc = "0.2"
