[package]
name = "holoiroh-daemon"
version = "0.1.0"
edition = "2024"
description = "Mac-side daemon that publishes screen+audio over iroh-live P2P and bridges prompts to holo-desktop-cli"

[dependencies]
# Loads holoiroh/mac-daemon/.env (gitignored -- holds HAI_API_KEY, per the H Company
# Inference API key the user supplied) into the process environment at startup, before
# HoloBridge::start spawns `holo serve` (which inherits parent env for HAI_API_KEY --
# see holo_bridge/process.rs). Matches holo-desktop-cli's own documented precedence:
# local .env, then ~/.holo/.env, then process env var.
dotenvy = "0.15"
# iroh-live is not published on crates.io as of this writing (verified via
# https://crates.io/api/v1/crates/iroh-live -> {"errors":[{"detail":"crate
# `iroh-live` does not exist"}]}, checked 2026-07-17). Using a git dependency
# against the upstream repo instead, pinned to a specific commit on `main`
# for reproducible builds (n0-computer/iroh-live has no version tags yet).
# The crate lives at the `iroh-live` subpath of that repo's own Cargo
# workspace (root Cargo.toml `members = ["iroh-live", ...]`), so `package`
# must be specified explicitly since the git URL itself points at the
# workspace root, not the crate directory.
#
# Pinned commit: 5f95758fcd1450e443a9134c9d9342bcc3957b85
# ("deps: update iroh and moq (#41)", 2026-07-15) — latest commit on `main`
# at the time this dependency was added. Bump deliberately; re-verify the
# crate's public API hasn't shifted before moving the pin.
iroh-live = { git = "https://github.com/n0-computer/iroh-live", rev = "5f95758fcd1450e443a9134c9d9342bcc3957b85", package = "iroh-live" }
# Direct dependency so control_channel.rs can reach `iroh::protocol::{Router, ProtocolHandler,
# AcceptError}` / `iroh::endpoint::Connection` for the control-channel ALPN, on top of the same
# `iroh::Endpoint` iroh-live's `Live` type owns. Pinned to the exact version iroh-live's own
# dependency graph resolves to (`cargo tree -p iroh` -> 1.0.2 as of this writing) via `=`, so
# Cargo can never resolve two different `iroh` versions into the build.
iroh = "=1.0.2"
# --display <index> CLI flag (see src/main.rs Cli struct).
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# holo_bridge: talks to `holo serve`'s local A2A (JSON-RPC over HTTP + SSE) endpoint and manages
# the `holo serve` subprocess. See holo_bridge/mod.rs doc comment for the source-grounded protocol
# details (verified against hcompai/holo-desktop-cli source, not invented).
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Config-file format for sensitive_categories.rs (~/.holoiroh/sensitive_categories.toml),
# chosen as the default over JSON there because it's the friendlier format for a human to
# hand-edit. Pinned to "0.8" (not the newer 1.x line) because 0.8.23 is already resolved
# transitively in this workspace's Cargo.lock (via iroh-live's own dependency graph) with
# serde support -- using the same version avoids pulling a second toml major version into
# the build.
toml = "0.8"
# Parses the `text/event-stream` body of the A2A `message/stream` JSON-RPC response frame-by-frame.
eventsource-stream = "0.2"
# src/tinfoil_proxy.rs: loopback HTTP server that forwards `holo serve`'s inference calls to
# the Tinfoil OpenAI-compatible endpoint with the real `Authorization: Bearer <key>` injected.
# A proxy (rather than handing the key to the runtime via env) is load-bearing, not a
# convenience: the hai-agent-runtime's only header env (HAI_EXTRA_HEADERS) parses
# space-separated `k=v` pairs, so a `Bearer <key>` value -- which contains a space -- is
# structurally inexpressible there (witnessed live: `Illegal header name` from httpx), and the
# runtime ignores OPENAI_API_KEY for its vLLM path (witnessed live: 401 with the key set).
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
# executor.rs: BroadcastStream wrapper for the ComputerUseExecutor::observe() event stream, and
# thiserror for its ExecutorError enum. Both are already resolved in Cargo.lock transitively
# (tokio-stream via iroh-live's graph, thiserror widely), so promoting them to direct deps here
# pulls in no new crate -- it just makes them nameable from this crate's own source.
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2"
# main.rs: render the iroh pairing ticket as a scannable terminal QR code (see PAIRING.md's
# "QR + short-phrase pairing" design) so the iOS app can scan it instead of the operator
# retyping a long ticket string. `default-features = false` drops the `image`/PNG feature we
# don't use for the terminal-block rendering path -- keeps the dep light (no image codecs).
qrcode = { version = "0.14", default-features = false }
# src/pairing_phrase.rs: SHA-256 for the SAS pairing phrase, byte-identical to the iOS side's
# CryptoKit SHA-256 (see holoiroh/ios/PAIRING_PHRASE.md's cross-platform contract). `sha2` is
# already resolved transitively in Cargo.lock via iroh's dependency graph, so this promotes it
# to a direct dep without pulling a new crate.
sha2 = "0.10"
# main.rs persistent_secret_key: hex-encode the generated iroh identity key for
# ~/.holoiroh/iroh_secret. Already resolved transitively via iroh's graph (and the
# exact crate iroh-live's own secret-key logging uses), so this promotes, not adds.
data-encoding = "2"
# Registers a synchronous SIGINT/SIGTERM handler in main.rs so the daemon's explicit shutdown
# sequence (closing the iroh Live session + LocalBroadcast, terminating the tracked `holo serve`
# child) runs on both signals -- `tokio::signal::ctrl_c()` alone only ever fires on SIGINT, not
# SIGTERM (e.g. what plain `kill`/launchd send by default), which would skip graceful cleanup on
# that path entirely.
ctrlc = { version = "3", features = ["termination"] }

# src/env_context.rs: native BGE-small-en-v1.5 embedding + libsql vector storage for the
# environment/user-context memory store (see that module's doc for the design -- ported as a
# PATTERN from AnEntrypoint/gm's rs-plugkit, not vendored: rs-plugkit's own embed.rs and
# agentplug-libsql are both wasm32-only, confirmed by direct inspection, so this daemon
# implements the same architecture (candle + BGE-small, libsql F32_BLOB + vector_top_k)
# natively instead). candle-core/-nn/-transformers pinned to 0.11 (crates.io max_stable as of
# this addition) -- rs-plugkit's own Cargo.toml pins 0.8 specifically because 0.11 fails to
# compile for ITS wasm32-wasip1 target; this daemon is a normal native binary, so that
# constraint does not apply here.
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = "0.23"
# NOTE: no `hf-hub` dependency here. Both of its 0.3.2 API surfaces (sync/`ureq` and
# tokio/`reqwest`) share a real, live bug in their redirect-following `metadata()`: they pass
# the response's `Location` header straight into a fresh request as if it were always an
# absolute URL, but HuggingFace's current CDN returns a genuinely RELATIVE `Location` header
# for this model's files (confirmed directly via `curl -I` against the real endpoint -- see
# env_context.rs::ensure_embedder's doc). `reqwest` (already a dependency, see below) resolves
# relative redirects correctly on its own, so env_context.rs fetches model files directly via
# `reqwest::get` instead of through hf_hub at all.
# Real, native libsql (the actual Turso/libsql-rs crate from crates.io) -- NOT
# agentplug-libsql, which was confirmed wasm32-only (its whole crate body is behind
# `#![cfg(target_arch = "wasm32")]`) and not vendorable into a native project.
libsql = "0.9"

[target.'cfg(unix)'.dependencies]
# Used only to send SIGTERM (graceful shutdown) to the `holo serve` child before falling back
# to SIGKILL; this daemon is macOS-only per holoiroh/README.md so `cfg(unix)` always applies.
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Permission preflight (src/permissions.rs): CGPreflightScreenCaptureAccess and
# AXIsProcessTrusted, both plain synchronous TCC-state queries with no prompting side effect.
# objc2-core-graphics is already part of this crate's dependency graph transitively (pulled in
# by iroh-live's macOS ScreenCaptureKit-based capture backend, per Cargo.lock), so this entry
# promotes it to a direct dependency rather than adding a second binding crate for the same
# framework. objc2-application-services is new (ApplicationServices/Accessibility has no
# existing transitive binding in this graph). Feature flags below were confirmed directly
# against the crates' own generated source (`generated/mod.rs`'s per-symbol `#[cfg(feature =
# "...")]` re-export gates), not guessed from scraped docs.rs pages -- see permissions.rs
# module doc:
#   - CGPreflightScreenCaptureAccess is re-exported only under `feature = "CGWindow"`
#     (objc2-core-graphics-0.3.2/src/generated/mod.rs:2338).
#   - AXIsProcessTrusted needs BOTH `feature = "HIServices"` (gates the entire `HIServices`
#     module the symbol lives in -- generated/mod.rs:23-25) AND `feature = "AXUIElement"`
#     (gates the individual re-export within that module --
#     generated/HIServices/mod.rs:124). Confirmed by `cargo build` still failing to find the
#     symbol with only "AXUIElement" enabled, tracing the module-level cfg gate directly.
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGWindow"] }
objc2-application-services = { version = "0.3", default-features = false, features = ["HIServices", "AXUIElement"] }
